# FinDL

./: .gitignore  README.md  pyproject.toml
docs/: peoject代码数据处理验证流程-20260214-陈俊同.docx  东方财富财务数据API映射最终版-陈俊同-20251030.xlsx  股票代码汇总-陈俊同-20251118.xlsx
script/: local.py  server.py
src/local/: crawl_index_data.py  crawl_stock_data.py  financial&candle_data_v0.3.py  merge_stock_index.py  preprocessing_data_v0.6_20260212185825.py
src/local/code/: crawl_index_data.py  crawl_stock_data.py  merge_stock_index.py
src/local/code/spider/: eastmoney_financial.py  financial_data_mapper.py
src/local/spider/: eastmoney_kline.py  eastmoney_v0.7.py  financial_data_mapper.py  financial_data_mapper_v3.21_batch_period.py  us_financial_analysis_indicator.py
src/server/: extract_company_data_v0.3_20260126155425.py  feature_selector.py  feature_utils.py  parquet_to_predata_v0.01_20260214.py  predict_and_evaluate_v0.1_20260212123505.py  predict_with_predata_v0.1_20260120133643.py  preprocessed_dataset.py  process_data_NaNto-1000_20260213.py  roll_generate_index_v0.7_20260111154500.py  train_timexer.py  trainer.py
src/server/code/: data_utils.py  extract_company_data_v0.3_20260126155425.py  loss_utils.py  metrics_utils.py  predict_and_evaluate_v0.1_20260212123505.py  stock_dataset.py  train_timexer.py  trainer.py
src/server/config/: dataset_config.yaml  timexer_config.yaml  training_config.yaml
src/server/models/: __init__.py  rope.py  timexer.py  timexer_blocks.py
src/server/utils/: __init__.py  parquet_to_excel.py
